--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,13 @@
 nav {
   min-height: 100px;
   line-height: 30px;
+
+}
+
+.foto-perfil {
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
 }
 
 .brand-logo , .inicio-sesion{
