--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@ nav {
   min-height: 100px;
   line-height: 30px; }
 
+.foto-perfil {
+  width: 20px;
+  height: 20px;
+  border-radius: 100%; }
+
 .brand-logo, .inicio-sesion {
   margin-left: 5%;
   margin-top: 2%; }
