--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,59 @@ nav {
   min-height: 100px;
   line-height: 30px; }
 
-.brand-logo, .inicio-sesion {
+.brand-logo, .menu {
+  padding-right: 5%;
   margin-left: 5%;
   margin-top: 2%; }
+
+img.responsive-img {
+  width: 60px !important;
+  height: 60px !important;
+  border: 2px solid #FF6530; }
+
+#usuario {
+  margin-top: 5%; }
+  #usuario .perfil {
+    box-shadow: 0px 0px  10px #FF6530;
+    text-align: center;
+    padding-bottom: 5%; }
+    #usuario .perfil .img-perfil {
+      margin: 10%;
+      width: 150px;
+      height: 150px;
+      border-radius: 100%;
+      border: 5px solid #FF6530; }
+
+#datos {
+  margin: 4% 0; }
+
+.borde {
+  box-shadow: 0px 0px  10px  #25cad3; }
+  .borde .formulario-datos {
+    padding: 5%; }
+    .borde .formulario-datos .btn-save {
+      border-radius: 20px; }
+
+#contact {
+  background: #393737;
+  box-shadow: 0px -5px 1px #FF6530;
+  padding-bottom: 3%; }
+  #contact .social {
+    margin: 10%; }
+    #contact .social .social__icon {
+      display: inline-flex;
+      margin-right: 6%; }
+      #contact .social .social__icon .social__icon--color {
+        background: linear-gradient(25deg, #e91e63, yellow); }
+      #contact .social .social__icon .social__icon--size {
+        font-size: 30px; }
+  #contact .newsletter {
+    margin-top: 3%; }
+
+footer {
+  background: #393737;
+  text-align: center;
+  margin-top: -1%;
+  padding-bottom: 1%; }
 
 /*# sourceMappingURL=style.css.map */
