--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -5,7 +5,8 @@
 .jumbotron{
 	background-color: white;
 	border:2px solid #ff661b;
-	height:580px;
+	box-shadow: 0px 0px  10px #FF6530;
+	height:618px;
 	font-family:'Muli', sans-serif;
 	label{
 		margin-top:3.5%;
@@ -15,10 +16,18 @@
 	}
 }
 .btn.btn-color{
+	display:inline-block;
 	background-color:#7FC719;
 	color:white;
-	margin-top:2%;
-	margin-left:37%;
+	margin-top:1%;
+	
+}
+#dos{
+		margin-top:-2%;
+		margin-left:8%;
+}
+div #carousel-example-generic.slide{
+	height:300px;
 }
 .carousel-caption{
 	background-color:rgba(246, 50, 60,.5);
@@ -27,7 +36,7 @@
 	.item{
 		img{
 		width:100%;
-		height:280px;
+		height:300px;
     }
 	}
 }
