--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,66 @@
-nav {
-  min-height: 100px;
-  line-height: 30px; }
+#imagenInicio {
+  width: 100%; }
 
-.brand-logo, .inicio-sesion {
-  margin-left: 5%;
-  margin-top: 2%; }
+#navegador {
+  box-shadow: 0px 5px 1px #F6323E; }
+
+.experimenta-logo {
+  width: 50%;
+  width: 50%;
+  margin-left: 10%; }
+
+#btn-iniciosesion {
+  background-color: #94D500;
+  /*width: 20%;*/ }
+
+.imagenfondo {
+  width: 100%;
+  height: 600px;
+  margin-top: 0%;
+  background-image: url("../assets/img/fotos-stock/Aventura/shutterstock_127957634.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  /*-webkit-transform: scaleX(-1);
+  -moz-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: FlipH;
+  -ms-filter: "FlipH";*/ }
+
+.card-panel {
+  margin-top: 20%;
+  width: 200%;
+  height: 700%; }
+
+.formularioiniciosesion .card {
+  /*opacity: 0.5;*/
+  background: rgba(255, 255, 255, 0.5);
+  color: #606060;
+  margin-top: 5%;
+  margin-left: 5%; }
+
+.active, #first_name2 {
+  padding: 0%; }
+
+#contact {
+  background: #393737;
+  box-shadow: 0px -5px 1px #FF6530;
+  padding-bottom: 3%; }
+  #contact .social {
+    margin: 10%; }
+    #contact .social .social__icon {
+      display: inline-flex;
+      margin-right: 6%; }
+      #contact .social .social__icon .social__icon--color {
+        background: linear-gradient(25deg, #e91e63, yellow); }
+      #contact .social .social__icon .social__icon--size {
+        font-size: 30px; }
+  #contact .newsletter {
+    margin-top: 3%; }
+
+footer {
+  background: #393737;
+  text-align: center;
+  margin-top: -1%;
+  padding-bottom: 1%; }
 
 /*# sourceMappingURL=style.css.map */
