--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,2 @@
-nav {
-  min-height: 100px;
-  line-height: 30px;
-}
-
-.brand-logo , .inicio-sesion{
-  margin-left: 5%;
-  margin-top: 2%;
-}
+@import "_inicioSesion";
+@import "_aclaraciones";
