--- a/scss/_usuario.scss
+++ b/scss/_usuario.scss
@@ -108,3 +108,24 @@ footer {
   margin-top: -1%;
   padding-bottom: 1%;
 }
+
+
+#cuentas {
+  margin-top: 5%;
+
+  .cuentas-datos {
+    background-color: #FF6530;
+  }
+
+  .img-experiencia {
+    width: 100%;
+  }
+}
+
+.titulo-cuentas, .titulo-experiencia {
+  margin-left: 5%;
+}
+
+.linea-naranja {
+  border: 2px solid #FF6530;
+}
