--- a/scss/_usuario.scss
+++ b/scss/_usuario.scss
@@ -1,7 +1,6 @@
 nav {
   min-height: 100px;
   line-height: 30px;
-
 }
 
 .foto-perfil {
@@ -128,4 +127,8 @@ footer {
 
 .linea-naranja {
   border: 2px solid #FF6530;
+}
+
+.linea-gris {
+  border: 1.5px solid rgba(#808080, 0.92);
 }
