--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,11 @@
   background-image: url("../assets/img/fotos-stock/Aventura/shutterstock_127957634.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  /*-webkit-transform: scaleX(-1);
+  -moz-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: FlipH;
+  -ms-filter: "FlipH";*/ }
 
 .card-panel {
   margin-top: 20%;
@@ -36,6 +41,32 @@
 .active, #first_name2 {
   padding: 0%; }
 
+#contact {
+  background: #393737;
+  box-shadow: 0px -5px 1px #FF6530;
+  padding-bottom: 3%; }
+  #contact .social {
+    margin: 10%; }
+    #contact .social .social__icon {
+      display: inline-flex;
+      margin-right: 6%; }
+      #contact .social .social__icon .social__icon--color {
+        background: linear-gradient(25deg, #e91e63, yellow); }
+      #contact .social .social__icon .social__icon--size {
+        font-size: 30px; }
+  #contact .newsletter {
+    margin-top: 3%; }
+
+footer {
+  background: #393737;
+  text-align: center;
+  margin-top: -1%;
+  padding-bottom: 1%; }
+
+nav {
+  min-height: 100px;
+  line-height: 30px; }
+
 .foto-perfil {
   width: 20px;
   height: 20px;
@@ -45,7 +76,6 @@
   padding-right: 5%;
   margin-left: 5%;
   margin-top: 2%; }
-
 
 img.responsive-img {
   width: 60px !important;
@@ -120,5 +150,49 @@ footer {
 
 .linea-naranja {
   border: 2px solid #FF6530; }
+
+.linea-gris {
+  border: 1.5px solid rgba(128, 128, 128, 0.92); }
+
+.aside {
+  margin-top: 4%;
+  height: 500px; }
+
+.jumbotron {
+  margin-top: 8%;
+  background-color: white;
+  border: 2px solid #ff661b;
+  box-shadow: 0px 0px  10px #FF6530;
+  height: 618px;
+  font-family: "Muli", sans-serif; }
+  .jumbotron label {
+    margin-top: 2.5%; }
+  .jumbotron input {
+    margin-top: -2%; }
+  .jumbotron select {
+    margin-top: 1%; }
+
+.btn.btn-color {
+  display: inline-block;
+  background-color: #7fc719;
+  color: white;
+  margin-top: 1%; }
+
+#dos {
+  margin-top: -2%;
+  margin-left: 16%; }
+
+div #carousel-example-generic.slide {
+  height: 300px; }
+
+div #carousel.slide {
+  height: 300px; }
+
+.carousel-caption {
+  background-color: rgba(234, 29, 117, 0.5); }
+
+.carousel-inner .item img {
+  width: 100%;
+  height: 300px; }
 
 /*# sourceMappingURL=style.css.map */
