--- a/scss/_inicioSesion.scss
+++ b/scss/_inicioSesion.scss
@@ -7,17 +7,20 @@
   box-shadow: 0px 5px 1px #F6323E;
 }
 
-.experimenta-logo{
-  width: 50%;
-  width: 50%;
-  margin-left: 10%;
-}
 
-#btn-iniciosesion{
+
+#btn-iniciosesion, #btn-registrarse{
   background-color: #94D500;
   /*width: 20%;*/
 }
 
+#btn-reestablecercontraseña{
+  background-color: #F6323E;
+}
+
+#input-correoycontraseña{
+  color: black;
+}
 .imagenfondo{
   width: 100%;
   height: 600px;
@@ -34,7 +37,7 @@
 }
 
 .card-panel{
-  margin-top: 20%;
+  margin-top: 30%;
   width: 200%;
   height: 700%;
 }
